--- a/pom.xml
+++ b/pom.xml
@@ -76,65 +76,25 @@
           </systemProperties>
         </configuration>
       </plugin>
-      <!--
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <id>copy-libs</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/extra-directory/app/libs</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${project.build.directory}/lib</directory>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      -->
-      <plugin>
-        <groupId>com.coderplus.maven.plugins</groupId>
-        <artifactId>copy-rename-maven-plugin</artifactId>
-        <version>1.0.1</version>
-        <executions>
-          <execution>
-            <id>rename-runner</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>rename</goal>
-            </goals>
-            <configuration>
-              <sourceFile>${project.build.directory}/${project.artifactId}-${project.version}-runner.jar</sourceFile>
-              <destinationFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</destinationFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
-        <version>1.8.0</version>
+        <version>2.1.1-SNAPSHOT</version>
         <configuration>
           <to>
             <image>quarkus-with-jib</image>
           </to>
           <container>
-            <mainClass>io.quarkus.runner.GeneratedMain</mainClass>
+            <mainClass>bogus</mainClass>
           </container>
-          <containerizingMode>packaged</containerizingMode>
-          <extraDirectories>
-            <paths>
-              <path>${project.build.directory}/extra-directory/</path>
-            </paths>
-          </extraDirectories>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.cloud.tools.jib.plugins.extension.maven.quarkus</groupId>
+            <artifactId>quarkus-extension-maven</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
